# kafka

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  build.bat  install.bat  install.sh  k.h  kfk.c  kfk.q  qp.json  socketpair.c  test_producer.q  travis_setup.sh  void.q
clib/: CMakeLists.txt  configure  qp.json  qpmake.sh
clib/include/: kafkakdb_client.h  kafkakdb_init.h  kafkakdb_producer.h  kafkakdb_topic.h  kafkakdb_utility.h  osthread.h  qtfm.h  socketpair.h
clib/src/: CMakeLists.txt  kafkakdb_client.c  kafkakdb_configuration.c  kafkakdb_consumer.c  kafkakdb_info.c  kafkakdb_init.c  kafkakdb_producer.c  kafkakdb_topic.c  kafkakdb_utility.c  osthread.c  socketpair.c
docs/: README.md  example.md  index.md  install.md  pipeline_reference.md  reference.md  schema_registry.md
downloads/: install_qtfm.sh
examples/: bare_consumer.q  bare_producer.q  consumer.q  decoding_consumer.q  deprecated_consumer.q  deprecated_producer.q  encoding_producer.q  idle_consumer.q  idle_producer.q  offset_consumer.q  offset_producer.q  producer.q  test_consumer.q  test_offsetc.q  test_offsetp.q  test_producer.q
include/: kafkakdb_client.h  kafkakdb_configuration.h  kafkakdb_consumer.h  kafkakdb_info.h  kafkakdb_init.h  kafkakdb_poll.h  kafkakdb_producer.h  kafkakdb_topic.h  kafkakdb_utility.h
q/: kafka.q  kafka_client.q  kafka_configuration.q  kafka_consumer.q  kafka_deprecated.q  kafka_info.q  kafka_init.q  kafka_producer.q  kafka_schema_registry.q  kafka_topic.q  kfk.q  transformer.q
schema/: athlete.proto  examples.proto  kdb_type_specifier.proto  person.avsc
src/: CMakeLists.txt  kafkakdb_client.c  kafkakdb_configuration.c  kafkakdb_consumer.c  kafkakdb_info.c  kafkakdb_init.c  kafkakdb_poll.c  kafkakdb_producer.c  kafkakdb_topic.c  kafkakdb_utility.c
stash/: kfk.c
tests/: bench_consumer.q  bench_producer.q  controller.q  test_consumer.q  test_helper_function.q  test_producer.q  test_stage1.q  test_stage2.q  test_stage3.q
